--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
     ".install-tsc": "npm install -g typescript"
   },
   "scripts": {
-    "create-module": "npm uninstall --save react && npm uninstall --save-dev babel-preset-react babel-plugin-react-transform && npm run .creation-prepare",
-    "create-module-with-react": "npm run .creation-prepare",
-    ".creation-prepare": "rm -rf .git && rm -rf package-lock.json && mv README.md README.boilerplate.md && echo # readme > README.md && npm run .creation-install",
-    ".creation-install": "npm install && npm run .creation-done",
-    ".creation-done": "node boilerplate.js && echo --- module created, set the name, version and repo address in package.json",
     "clear": "rimraf build temp",
     "debug-build": "rimraf build && webpack --config webpack.debug-dev.nodejs.config.js --watch",
+    "start": "webpack-dev-server --config webpack.debug-dev.browser.config.js --port 8027 --devtool eval --progress --hot --content-base debug-ground/debug-dev-on-browser --host 0.0.0.0",
     "debug-browser": "webpack-dev-server --config webpack.debug-dev.browser.config.js --port 8027 --devtool eval --progress --hot --content-base debug-ground/debug-dev-on-browser --host 0.0.0.0",
     "debug-devtools": "node --inspect ./debug-ground/debug-dev-on-nodejs/index.js  && npm run debug-devtools",
     "debug-devtools-brk": "node --inspect --debug-brk ./debug-ground/debug-dev-on-nodejs/index.js  && npm run debug-devtools-brk",
@@ -65,6 +61,7 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.11.6",
+    "debug": "^3.1.0",
     "file-loader": "0.9.0",
     "font-awesome": "4.6.3",
     "html-webpack-plugin": "^2.30.1",
