--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
   "author": "Anel dev",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.4",
     "three": "^0.87.1"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^2.28.0",
     "@types/jest": "^20.0.0",
     "@types/node": "^7.0.14",
-    "@types/three": "^0.84.27",
+    "@types/three": "^0.84.30",
     "awesome-typescript-loader": "^3.2.3",
     "babel-core": "6.11.4",
     "babel-loader": "6.0.0",
